--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vite-plugin-dts": "^4.1.0"
+    "vite-plugin-dts": "^4.1.0",
+    "vitest": "^2.0.5"
   }
 }
