--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@flora-studio/pixi-flex": "0.0.0",
+    "pixi.js": "^8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
