--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@flora-studio/pixi-flex": "0.0.0",
+    "@florastudio/pixi-flex": "0.0.1",
     "pixi.js": "^8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
