--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Build
-        run: yarn workspace demo run build
+        run: yarn run build:demo
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
