--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -36,7 +36,7 @@ jobs:
           node-version: 20
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn workspace demo install --focus --frozen-lockfile
       - name: Build
         run: yarn run build:demo
       - name: Setup Pages
